// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Group component Field group component props Can mark inner input as required 1`] = `
<div
  className="caldera-config-group"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="field-config required block-input"
    id="control-22"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Can show an input  1`] = `
<div
  className="caldera-config-group"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="field-config block-input"
    id="control-22"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Help text is optional 1`] = `
<div
  className="caldera-config-group"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="field-config block-input"
    id="control-22"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Works with help text 1`] = `
<div
  className="caldera-config-group"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby="control-22-description"
    className="field-config block-input"
    id="control-22"
    onChange={[Function]}
    required={false}
    type="text"
  />
  <p
    className="description"
    id="control-22-description"
  >
    Who to say hi to
  </p>
</div>
`;
